--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About | Start Class</title>
+        <title>About | Pro Builders</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
