--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <title>Pro Builders</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body style="background-image: url(https://www.picfair.com/pics/08621339-construction-engineers-at-work);">
+    <body style="background-image: url(https://images.unsplash.com/photo-1591588582259-e675bd2e6088?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80); background-repeat: no-repeat; background-size: cover;">
         <!-- <header class="">
             <a href="/">
                 <h1>EDU 499</h1>
             </a>
         </header> -->
-        <main style="height: 93vh;" class="padding">
+        <main style="height: 93vh; background-color: rgba(255,255,255,.4);" class="padding">
             <br>
             <br>
             <section style="text-align: center;">
