--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pro Builders</title>
+        <link rel="manifest" href="manifest.json">
         <link rel="stylesheet" href="style.css">
     </head>
     <body style="background-image: url(https://images.unsplash.com/photo-1591588582259-e675bd2e6088?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80); background-repeat: no-repeat; background-size: cover;">
